2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553578 - tabs are not drawn correctly

	* gtk/gtknotebook.c: Track the visibility state of notebook tabs 
	between allocations so that we know to redraw the tab labels if 
	tabs are hidden and shown without changing position. 
	Reported by Marek Kašík, patch by Owen Taylor.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553133 – GtkFileChooser won't ask to mount a volume
	Bug 553211 – GtkFileChooserButton unsets filter after first use

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_volume): Use
	a GtkMountOperation when mounting, so that we get a password
	dialog when required.  

	* gtk/gtkfilechooserdefault.c (show_and_select_files): Also
	get the content-type, since it is used later on. 
	Pointed out by Davyd Madeley.

2008-09-26  Cody Russell  <bratsche@gnome.org>

	Bug 553917 – Typo in gdkwindow-win32.c

	* gdk/win32/gdkwindow-win32.c: Fixed a typo in
	update_system_menu().  Changed GDK_DECOR_ALL to GDK_FUNC_ALL.

	Reported by Richard Hult

2008-09-25  Marek Kasik  <mkasik@redhat.com>

	Bug 553241 – double freed pointer in lpr_write cause firefox3 crash

	* modules/printbackends/lpr/gtkprintbackendlpr.c:
	The redundant freeing of memory was removed.

	Patch by Chris Wang

2008-09-25  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_finalize):
	don't unref the file system backend, the newly added
	unset_file_system_backend() already does this (bug #553135).

2008-09-24  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkeventbox.c: events return gboolean not gint, reindented
	static prototypes.

2008-09-24  Johan Dahlin  <johan@gnome.org>

	Bug 553385 – gtk-builder-convert creates untranslated combobox models

	* gtk/gtk-builder-convert: Set the translatable property on
	col tags for converted combos.

2008-09-24  Tor Lillqvist  <tml@novell.com>

	* gtk-zip.sh.in: Include all of share/man, lib/pkgconfig,