@@ -63,6 +63,9 @@ _gdk_init_input_core (GdkDisplay *display)
   private->display = display;
 }
 
+static void gdk_device_class_init (GdkDeviceClass *klass);
+static void gdk_device_finalize (GObject *object);
+
 GType
 gdk_device_get_type (void)
 {
@@ -75,7 +78,7 @@ gdk_device_get_type (void)
 	  sizeof (GdkDeviceClass),
 	  (GBaseInitFunc) NULL,
 	  (GBaseFinalizeFunc) NULL,
-	  (GClassInitFunc) NULL,
+	  (GClassInitFunc) gdk_device_class_init,
 	  NULL,           /* class_finalize */
 	  NULL,           /* class_data */
 	  sizeof (GdkDevicePrivate),
@@ -89,6 +92,33 @@ gdk_device_get_type (void)
     }
   
   return object_type;
+}
+
+static void
+gdk_device_class_init (GdkDeviceClass *klass)
+{
+  GObjectClass *object_class = G_OBJECT_CLASS (klass);
+
+  object_class->finalize = gdk_device_finalize;
+}
+
+static void
+gdk_device_finalize (GObject *object)
+{
+  GdkDevicePrivate *gdkdev = (GdkDevicePrivate *)GDK_DEVICE(object);
+
+  if (!GDK_IS_CORE (gdkdev))
+  {
+#ifndef XINPUT_NONE
+    if (gdkdev->xdevice)
+      XCloseDevice (GDK_DISPLAY_XDISPLAY(gdkdev->display), gdkdev->xdevice);
+    g_free (gdkdev->axes);
+#endif /* !XINPUT_NONE */
+
+    g_free (gdkdev->info.name);
+    g_free (gdkdev->info.keys);
+    g_free (gdkdev->info.axes);
+  }
 }
 
 /**
@@ -403,14 +433,7 @@ _gdk_input_exit (void)
 	  if (!GDK_IS_CORE (gdkdev))
 	    {
 	      gdk_device_set_mode (&gdkdev->info, GDK_MODE_DISABLED);
-	      
-	      g_free(gdkdev->info.name);
-#ifndef XINPUT_NONE	  
-	      g_free(gdkdev->axes);
-#endif	  
-	      g_free(gdkdev->info.axes);
-	      g_free(gdkdev->info.keys);
-	      g_free(gdkdev);
+	      g_object_unref(gdkdev);
 	    }
 	}
       
